[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/halo.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://demo/gui/water_preset.tres" type="Texture" id=3]
[ext_resource path="res://demo/gui/vis_pressure.tres" type="Texture" id=4]
[ext_resource path="res://demo/scripts/GUIBar.gd" type="Script" id=5]
[ext_resource path="res://scripts/Input.gd" type="Script" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D color_ramp;

uniform bool blobby = false;

void fragment() {
	
	if(blobby) {
		float threshold = texture(TEXTURE, UV).r*2.0 - 1.0;
		if(threshold >= 0.0)
			COLOR = texture(color_ramp, vec2(threshold, 0));
		else
			COLOR = vec4(0.0);
	} else {
		COLOR = texture(TEXTURE, UV);
		COLOR.rgb = texture(color_ramp, vec2(COLOR.r, 0)).rgb;
		COLOR.a = 1.0 - step(COLOR.a, 0.5);
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blobby = true
shader_param/color_ramp = ExtResource( 3 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("View")

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
render_mode blend_add;

void fragment() {
	COLOR = vec4(distance(vec2(0.5), UV) * 2.0);
	COLOR.a = COLOR.a > 1.0 ? 0.0 : COLOR.a;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="Node" type="Node"]

[node name="Panel" type="Panel" parent="."]
margin_left = -100.0
margin_right = -9.0
margin_bottom = 156.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureRect" parent="Panel"]
margin_left = 7.0
margin_top = 143.0
margin_right = 122.0
margin_bottom = 169.0
rect_rotation = -90.0
texture = ExtResource( 4 )
expand = true

[node name="MinVal" type="Label" parent="Panel"]
margin_left = 36.0
margin_top = 129.0
margin_right = 76.0
margin_bottom = 143.0
text = "0.000"

[node name="MaxVal" type="Label" parent="Panel"]
margin_left = 36.0
margin_top = 28.0
margin_right = 76.0
margin_bottom = 42.0
text = "100"

[node name="BarType" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Pressure"
valign = 2

[node name="Tween" type="Tween" parent="Panel"]

[node name="Paused" type="Label" parent="."]
margin_left = 940.0
margin_right = 991.0
margin_bottom = 14.0
text = "Paused"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="FluidDisplay" type="Sprite" parent="Node2D"]
material = SubResource( 2 )
texture = SubResource( 3 )
centered = false

[node name="Input" type="Node2D" parent="Node2D"]
visible = false
script = ExtResource( 6 )

[node name="mouse" type="Sprite" parent="Node2D/Input"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="LiquidView" type="Area2D" parent="Node2D"]
collision_layer = 2147483649
collision_mask = 2
[connection signal="body_entered" from="Node2D/LiquidView" to="." method="_on_LiquidView_body_entered"]
